# kontrol

./: Cargo.toml  docker-compose.yml
db/: Cargo.toml
db/src/: .env  lib.rs  main.rs
db/src/entities/payments/: installments.rs  subscriptions.rs
db/src/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240223_034128_create_service.rs
db/src/migrations/: m20230323_init.rs  mod.rs
src/: main.rs
