[workspace]
members = [".", "db"]

[package]
name = "kontrol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
env_logger = "0.10.0"
log = "0.4.17"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros", "debug-print", "with-chrono", "with-uuid"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
db = { path = "db" }
