[package]
name = "db"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "db"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenv = "0.15.0"

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
   "sqlx-postgres", "runtime-actix-rustls"
]
